fix spacing of unveto button

--- a/dominionator_styles.css
+++ b/dominionator_styles.css
@@ -9,7 +9,9 @@ body {
   max-height: 0;
   margin-bottom: 0;
   margin-top: 0;
+  padding: 0;
 }
+
 
 .slideLeft + ul {
   margin-top: 0;
@@ -18,11 +20,17 @@ body {
 }
 
 .hideCenter {
-  visibility: hidden;
+  display: none;
   overflow: hidden;
   max-height: 0;
   margin-bottom: 0;
   margin-top: 0;
+}
+
+
+button.hideCenter {
+  padding: 0;
+  border: none
 }
 
 .slideRight {
